--- a/myst.yml
+++ b/myst.yml
@@ -23,10 +23,18 @@ project:
   license: CC-BY-4.0
   toc:
     - file: intro.md
+    - file: 00_netlogo/index.md
+      children:
+        - file: 00_netlogo/coding/index.md
+          children:
+            - file: 00_netlogo/coding/1_agents.md
+    - file: 01_Intro/01a_WhatIsAModel.md
   # To autogenerate a Table of Contents, run "jupyter book init --write-toc"
 site:
   template: book-theme
   options:
-    folder: true
+    folders: true
   #   favicon: favicon.ico
-  #   logo: site_logo.png
+    logo: logos/logo.png
+    logo_dark: logos/logo_dark.png
+    logo_text: HNRS251A
