--- a/myst.yml
+++ b/myst.yml
@@ -33,15 +33,12 @@ project:
     - file: netlogo/index.md
       children:
         - file: netlogo/0_intro.md
-        - title: Programming Tutorials
-          children:
-            - file: netlogo/coding/index.md
-            - file: netlogo/coding/1_basics.md
-            - file: netlogo/coding/2_agents.md
-            - file: netlogo/coding/3_environment.md
-            - file: netlogo/coding/4_first-model.md
-            - file: netlogo/coding/5_data-analysis.md
-            - file: netlogo/coding/6_advanced.md
+        - file: netlogo/1_basics.md
+        - file: netlogo/2_agents.md
+        - file: netlogo/3_environment.md
+        - file: netlogo/4_first-model.md
+        - file: netlogo/5_data-analysis.md
+        - file: netlogo/6_advanced.md
   # To autogenerate a Table of Contents, run "jupyter book init --write-toc"
 site:
   template: book-theme
