all the way until tutorial 4 done

--- a/myst.yml
+++ b/myst.yml
@@ -39,11 +39,13 @@ project:
             - file: netlogo/0b_intro.md
             - file: netlogo/0c_intro.md
             - file: netlogo/0d_intro.md
+            - file: netlogo/0e_intro.md
         - file: netlogo/1a_basics.md
           children:
             - file: netlogo/1b_basics.md
             - file: netlogo/1c_basics.md
             - file: netlogo/1d_basics.md
+            - file: netlogo/1e_basics.md
         - file: netlogo/2a_agents.md
           children:
             - file: netlogo/2b_agents.md
@@ -51,12 +53,19 @@ project:
             - file: netlogo/2d_agents.md
             - file: netlogo/2e_agents.md
             - file: netlogo/2f_agents.md
+            - file: netlogo/2g_agents.md
         - file: netlogo/3a_environment.md
           children:
             - file: netlogo/3b_environment.md
             - file: netlogo/3c_environment.md
             - file: netlogo/3d_environment.md
+            - file: netlogo/3e_environment.md
         - file: netlogo/4_first-model.md
+          children:
+            - file: netlogo/4a_first-model.md
+            - file: netlogo/4b_first-model.md
+            - file: netlogo/4c_first-model.md
+            - file: netlogo/4d_first-model.md
         - file: netlogo/5_data-analysis.md
         - file: netlogo/6_advanced.md
   # To autogenerate a Table of Contents, run "jupyter book init --write-toc"
